fix(home): wish to support bg overlapping header (closes #20)

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -149,7 +149,7 @@
 .support-content-box {
   padding-top: $spacer * 5;
   background-color: $rich-pink;
-  z-index: 99999;
+  z-index: 999;
   border-radius: 100px;
 }
 
